feat: add apply discount and some fixing
